--- a/Projekt2/CMakeLists.txt
+++ b/Projekt2/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Projekt2)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Projekt2 main.cpp HeapPriorityQueue.h HeapPriorityQueue.cpp HeapNode.h HeapNode.cpp ListNode.h ListNode.cpp ListPriorityQueue.h ListPriorityQueue.cpp Testy.h Queue.h)
+add_executable(Projekt2 main.cpp HeapPriorityQueue.h HeapPriorityQueue.cpp HeapNode.h HeapNode.cpp ListNode.h ListNode.cpp ListPriorityQueue.h ListPriorityQueue.cpp Testy.h)
